adding color map functionality

--- a/resources/public/SpecRunner.html
+++ b/resources/public/SpecRunner.html
@@ -15,7 +15,7 @@
   <script type="text/javascript" src="js/jasmine/jasmine.js"></script>
   <script type="text/javascript" src="js/jasmine/jasmine-html.js"></script>
 
-  <script type="text/javascript" src="../private/js/unit-test.js"></script>
+  <script type="text/javascript" src="../private/js/jasmine-test.js"></script>
  <!-- <script type="text/javascript" src="js/cljs.js"></script>-->
 
   <script type="text/javascript">
@@ -47,3 +47,4 @@
     })();
   </script>
 </html>
+
